--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -12,27 +12,30 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <form method="GET" action="/" class="govuk-!-margin-bottom-6">
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-two-thirds">
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="search">
-                Search projects
-              </label>
-              <div id="search-container" class="govuk-!-margin-bottom-0"></div>
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="search">
+            Search projects
+          </label>
+          <div class="gem-c-search">
+            <div class="gem-c-search__item-wrapper">
+              <div class="js-search-input-wrapper">
+                <div id="search-container" class="govuk-!-margin-bottom-0"></div>
+              </div>
+              <div class="gem-c-search__item gem-c-search__submit-wrapper">
+                <button class="gem-c-search__submit" type="submit" enterkeyhint="search">
+                  <svg class="gem-c-search__icon" width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <circle cx="12.0161" cy="11.0161" r="8.51613" stroke="currentColor" stroke-width="3"></circle>
+                    <line x1="17.8668" y1="17.3587" x2="26.4475" y2="25.9393" stroke="currentColor" stroke-width="3"></line>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
-          <div class="govuk-grid-column-one-third">
-            <div class="govuk-form-group govuk-!-margin-top-6">
-              {{ govukButton({
-                text: "Search",
-                type: "submit"
-              }) }}
-              
-              {% if searchTerm %}
-                <a href="/" class="govuk-link govuk-!-margin-left-3">Clear search</a>
-              {% endif %}
-            </div>
-          </div>
+          {% if searchTerm %}
+            <p class="govuk-body govuk-!-margin-top-3">
+              <a href="/" class="govuk-link">Clear search</a>
+            </p>
+          {% endif %}
         </div>
       </form>
 
@@ -65,6 +68,106 @@
       {% endif %}
     </div>
   </div>
+{% endblock %}
+
+{% block pageStyles %}
+<style>
+  /* GOV.UK Search Component Styles */
+  .gem-c-search {
+    position: relative;
+    max-width: 100%;
+  }
+
+  .gem-c-search__item-wrapper {
+    display: flex;
+    position: relative;
+  }
+
+  .gem-c-search__item {
+    position: relative;
+  }
+
+  .js-search-input-wrapper {
+    flex: 1;
+  }
+
+  .gem-c-search__input {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    border-right: none !important;
+    height: 50px !important;
+    box-sizing: border-box !important;
+  }
+
+  .gem-c-search__submit-wrapper {
+    flex: 0 0 auto;
+  }
+
+  .gem-c-search__submit {
+    background-color: #1d70b8;
+    border: 3px solid #1d70b8;
+    border-left: none;
+    border-radius: 0 4px 4px 0;
+    color: #ffffff;
+    cursor: pointer;
+    font-family: "GDS Transport", arial, sans-serif;
+    font-size: 0;
+    line-height: 1;
+    padding: 0;
+    position: relative;
+    text-align: center;
+    vertical-align: top;
+    white-space: nowrap;
+    height: 50px;
+    width: 50px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .gem-c-search__submit:hover {
+    background-color: #003078;
+    border-color: #003078;
+  }
+
+  .gem-c-search__submit:focus {
+    background-color: #fd0;
+    border-color: #fd0;
+    box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
+    color: #0b0c0c;
+    outline: 4px solid transparent;
+  }
+
+  .gem-c-search__submit:focus .gem-c-search__icon {
+    color: #0b0c0c;
+  }
+
+  .gem-c-search__icon {
+    color: currentColor;
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+    margin-left: 5px;
+  }
+
+  /* Ensure the autocomplete input matches the search styling */
+  .autocomplete__wrapper {
+    position: relative !important;
+  }
+
+  .autocomplete__input {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    border-right: none !important;
+    height: 50px !important;
+    box-sizing: border-box !important;
+  }
+
+  .autocomplete__input:focus {
+    border-right: none !important;
+  }
+</style>
 {% endblock %}
 
 {% block pageScripts %}
