--- a/src/server/projects/add/views/index.njk
+++ b/src/server/projects/add/views/index.njk
@@ -92,6 +92,6 @@
     {{ govukButton({
       text: "Add project"
     }) }}
-    <a href="/" class="govuk-button govuk-button--secondary" role="button">Cancel</a>
+    <a href="/projects" class="govuk-button govuk-button--secondary" role="button">Cancel</a>
   </form>
 {% endblock %} 
