--- a/src/server/projects/manage/views/add-partner.njk
+++ b/src/server/projects/manage/views/add-partner.njk
@@ -12,7 +12,7 @@
     items: [
       {
         text: "Projects",
-        href: "/"
+        href: "/projects"
       },
       {
         text: project.name,
