--- a/src/server/projects/manage/views/status.njk
+++ b/src/server/projects/manage/views/status.njk
@@ -14,7 +14,7 @@
     items: [
       {
         text: "Projects",
-        href: "/"
+        href: "/projects"
       },
       {
         text: project.name
