--- a/src/server/projects/standards/views/archive-assessment.njk
+++ b/src/server/projects/standards/views/archive-assessment.njk
@@ -9,7 +9,7 @@
     items: [
       {
         text: "Projects",
-        href: "/"
+        href: "/projects"
       },
       {
         text: project.name,
