--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -45,8 +45,8 @@
       <div class="govuk-service-navigation__container">
         <nav aria-label="Service navigation" class="govuk-service-navigation__wrapper">
           <ul class="govuk-service-navigation__list">
-            <li class="govuk-service-navigation__item{% if currentPath == '/' or (currentPath and currentPath.startsWith('/projects')) %} govuk-service-navigation__item--active{% endif %}">
-              <a class="govuk-service-navigation__link" href="/">Projects</a>
+            <li class="govuk-service-navigation__item{% if currentPath and currentPath.startsWith('/projects') %} govuk-service-navigation__item--active{% endif %}">
+              <a class="govuk-service-navigation__link" href="/projects">Projects</a>
             </li>
             {% if isAdmin %}
             <li class="govuk-service-navigation__item{% if currentPath and currentPath.startsWith('/admin') %} govuk-service-navigation__item--active{% endif %}">
