--- a/src/server/errors/not-found.njk
+++ b/src/server/errors/not-found.njk
@@ -15,7 +15,7 @@
       
       <p class="govuk-body">You can also:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>go back to the <a href="/" class="govuk-link">projects homepage</a></li>
+        <li>go back to the <a href="/projects" class="govuk-link">projects homepage</a></li>
         <li>use the search function to find a specific project</li>
         <li><a href="/about" class="govuk-link">contact us</a> if you cannot find what you're looking for</li>
       </ul>
