--- a/src/server/projects/manage/views/details.njk
+++ b/src/server/projects/manage/views/details.njk
@@ -13,7 +13,7 @@
     items: [
       {
         text: "Projects",
-        href: "/"
+        href: "/projects"
       },
       {
         text: project.name
