--- a/src/server/projects/standards/views/assessment-history.njk
+++ b/src/server/projects/standards/views/assessment-history.njk
@@ -10,7 +10,7 @@
     items: [
       {
         text: "Projects",
-        href: "/"
+        href: "/projects"
       },
       {
         text: project.name,
