--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -103,34 +103,6 @@
     border-right: none !important;
   }
 
-  /* Inverted navigation for home page - following GOV.UK Design System pattern */
-  .govuk-service-navigation {
-    background-color: #1d70b8 !important;
-  }
-  
-  .govuk-service-navigation__container {
-    border-top: 1px solid #ffffff !important;
-  }
-  
-  .govuk-service-navigation__link {
-    color: #ffffff !important;
-  }
-  
-  .govuk-service-navigation__link:hover {
-    color: #ffffff !important;
-    background-color: #003078 !important;
-  }
-  
-  .govuk-service-navigation__link:focus {
-    color: #0b0c0c !important;
-    background-color: #fd0 !important;
-  }
-  
-  /* Remove active state styling on home page */
-  .govuk-service-navigation__item--active .govuk-service-navigation__link {
-    background-color: transparent !important;
-    color: #ffffff !important;
-  }
 
   /* Delivery groups sidebar - same formatting as project details page */
   .delivery-groups-sidebar {
@@ -192,9 +164,9 @@
         The Cross Cutting Technical Services (CCTS) Assurance team provides assurance of Defra's digital delivery so that leaders, teams, and users can be confident in the health and quality of services.
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><strong>Give leaders confidence:</strong> offering impartial assessments of delivery health and whether projects are set up to succeed.</li>
-        <li><strong>Support delivery teams:</strong> providing constructive feedback and recommendations to strengthen capability and practice.</li>
-        <li><strong>Protect value for users:</strong> ensuring services are designed to meet user needs and are delivered in line with GDS and Defra standards.</li>
+        <li><strong>give leaders confidence:</strong> offering impartial assessments of delivery health and whether projects are set up to succeed.</li>
+        <li><strong>support delivery teams:</strong> providing constructive feedback and recommendations to strengthen capability and practice.</li>
+        <li><strong>protect value for users:</strong> ensuring services are designed to meet user needs and are delivered in line with GDS and Defra standards.</li>
       </ul>
       <p class="govuk-body">
         Our assurance approach is independent, transparent, and proportionate to risk.
